--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <div class="swiper-wrapper">
       <div class="swiper-slide" style="background-image: url('img/slider-sabogal-image1.jpg')"></div>
       <div class="swiper-slide" style="background-image: url('img/slider-sabogal-image2.jpg')"></div>
-      <div class="swiper-slide" style="background-image: url('img/slider-sabogal-image3.jpg.jpg')"></div>
+      <div class="swiper-slide" style="background-image: url('img/slider-sabogal-image3.jpg')"></div>
     </div>
     <div class="swiper-pagination"></div>
   </div>
@@ -93,7 +93,7 @@
         el: '.swiper-pagination',
         clickable: true,
         renderBullet: function (index, className) {
-          return '<span class="' + className + '">' + (index +1) + '</span>';
+          return '<span class="' + className + '">' + (index + 1) + '</span>';
         },
       },
     });
